--- a/src/styles/Homepage.css
+++ b/src/styles/Homepage.css
@@ -1,6 +1,6 @@
-.body {
+/* .body {
   background-color: greenyellow;
-}
+} */
 
 .homepage__header {
   display: flex;
@@ -8,6 +8,7 @@
 
 .homepage__header-img {
   width: 50px;
+  height: 50px;
 }
 
 .homepage__swiper {
@@ -17,8 +18,6 @@
 }
 
 .homepage__swiper-container {
-  /* width: 80%;
-  height: 42rem; */
   height: 100%;
   background-color: #16e8ec;
 }
